# bac-agentic-project

./: .gitignore  .hintrc  gen_presentation.py  plan.md  talk.md  tasks.md
admin-panel/client/: .env.example  .pre-commit-config.yaml  README.md  index.html  package-lock.json  package.json
admin-panel/client/src/: App.css  App.tsx  index.css
admin-panel/client/src/components/: ErrorBoundary.css  ErrorBoundary.tsx  LoadingSpinner.css  LoadingSpinner.tsx
admin-panel/client/src/components/onboarding/: StreamSelection.css  StreamSelection.tsx
admin-panel/client/src/pages/: ChatInterface.css  ChatInterface.tsx  Dashboard.css  Dashboard.tsx  Onboarding.css  Onboarding.tsx
admin-panel/client/src/store/: appStore.ts
admin-panel/client/src/types/: index.ts
backend/: .pre-commit-config.yaml  OCR_README.md  RAG_README.md  chat_service.py  database.py  init_db.py  main.py  models.py  ocr_engine.py  pyproject.toml  rag_pipeline.py  schemas.py  scraper.py
backend/data/: README.md
backend/data/exams/2023/: bac_math_2023_principal_math.pdf.json  bac_math_2023_principal_physics.pdf.json  bac_sci_exp_2023_principal_sciences.pdf.json
backend/data/processed/: bac_math_2023_principal_math.pdf.processed.json
backend/data/vector_store/: chunks.json  embeddings.npy
backend/tests/: test_chat_api.py  test_coefficient_engine.py  test_rag_pipeline.py
